fix(View): Fix shadow on iOS swipe back (#5804)
Добавляем затемнение при swipeBack на iOS на появляющейся панели, при этом убираем тень сбоку у текущей панели.

* Изменения
- во `View` добавлен `div`, отвечающий за затемнение панели, рендерящейся внутри `View`.
  - такой же div, используемый для затемнения панели при переходах между панелями был удалён из Panel, потому что теперь мы используем его во `View`.   
Удалил, так как мы всё равно стили для него задавали во `View`, а теперь мы должны иметь доступ к нему напрямую для того, чтобы высчитать и присвоить значение `opacity` при `swipeBack`.
- затемнение сделано через div рендерящийся только для при `swipeBack` только для следующей панели.   
  - Изначально он имеет частично прозрачный фон, после чего во время swipeBack мы высчитываем opacity для всего div относительно того, на сколько сдвинута основная панель.   
  - Если пользователь внезапно отпускает панель, но по результатам swipeBack мы либо устанавливаем opacity в 0 (если swipeBack удачный) либо в 1 (если swipeBack отменён или не дотянут до половины экрана). 
  - При этом начинают работать стили и transition opacity чтобы затемнение при появление/исчезновени панели было плавным а не резким.
- переписаны селекторы стилей затемнения панели при `Transition` переходах, чтобы использовался локальный div внутри `View`, а не тот что был определён в `Panel`.

--- a/packages/vkui/src/components/View/View.module.css
+++ b/packages/vkui/src/components/View/View.module.css
@@ -42,9 +42,55 @@
   overflow: hidden;
 }
 
+.View__panel-overlay {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #000;
+  pointer-events: none;
+  z-index: var(--vkui_internal--z_index_panel_header_fade);
+}
+
+/**
+ * Panel swipe back
+ */
+
+.View--ios .View__panel--swipe-back-prev.View__panel--swipe-back-success {
+  transition: transform 0.3s var(--vkui--animation_easing_platform);
+  transform: translate3d(100%, 0, 0);
+}
+
+.View--ios .View__panel--swipe-back-next.View__panel--swipe-back-success {
+  transition: transform 0.3s var(--vkui--animation_easing_platform);
+  transform: translate3d(0, 0, 0);
+}
+
+.View--ios .View__panel--swipe-back-prev.View__panel--swipe-back-failed {
+  transition: transform 0.3s var(--vkui--animation_easing_platform);
+  transform: translate3d(0, 0, 0);
+}
+
+.View--ios .View__panel--swipe-back-next.View__panel--swipe-back-failed {
+  transition: transform 0.3s var(--vkui--animation_easing_platform);
+  transform: translate3d(-50%, 0, 0);
+}
+
+.View--ios .View__panel--swipe-back-next .View__panel-overlay {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.View--ios .View__panel--swipe-back-next.View__panel--swipe-back-success .View__panel-overlay,
+.View--ios .View__panel--swipe-back-next.View__panel--swipe-back-failed .View__panel-overlay {
+  transition: opacity 0.3s var(--vkui--animation_easing_platform);
+}
+
 /**
  * Panel transition
  */
+
 .View__panel--next ~ .View__panel--prev {
   animation: animation-view-prev-back 0.3s var(--vkui--animation_easing_platform) forwards;
 }
@@ -80,37 +126,6 @@
   }
 }
 
-/**
- * Panel swipe back
- */
-
-.View--ios .View__panel--swipe-back-prev {
-  box-shadow: -2px 0 12px rgba(0, 0, 0, 0.3);
-}
-
-.View--ios .View__panel--swipe-back-prev.View__panel--swipe-back-success {
-  transition: transform 0.3s var(--vkui--animation_easing_platform);
-  transform: translate3d(100%, 0, 0);
-}
-
-.View--ios .View__panel--swipe-back-next.View__panel--swipe-back-success {
-  transition: transform 0.3s var(--vkui--animation_easing_platform);
-  transform: translate3d(0, 0, 0);
-}
-
-.View--ios .View__panel--swipe-back-prev.View__panel--swipe-back-failed {
-  transition: transform 0.3s var(--vkui--animation_easing_platform);
-  transform: translate3d(0, 0, 0);
-}
-
-.View--ios .View__panel--swipe-back-next.View__panel--swipe-back-failed {
-  transition: transform 0.3s var(--vkui--animation_easing_platform);
-  transform: translate3d(-50%, 0, 0);
-}
-
-/**
- * Panel transition
- */
 .View--ios .View__panel--prev {
   animation: animation-ios-prev-forward 0.6s var(--vkui--animation_easing_platform);
 }
@@ -127,28 +142,21 @@
   animation: animation-ios-prev-back 0.6s var(--vkui--animation_easing_platform) forwards;
 }
 
-.View--ios .View__panel--prev :global(.vkuiInternalPanel__fade),
-.View--ios .View__panel--next :global(.vkuiInternalPanel__fade) {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: #000;
-  pointer-events: none;
-  z-index: var(--vkui_internal--z_index_panel_header_fade);
+.View--ios .View__panel--prev .View__panel-overlay,
+.View--ios .View__panel--next .View__panel-overlay {
+  display: block;
 }
 
-.View--ios .View__panel--prev :global(.vkuiInternalPanel__fade) {
+.View--ios .View__panel--prev .View__panel-overlay {
   animation: animation-ios-fade-in 0.6s var(--vkui--animation_easing_platform);
 }
 
-.View--ios .View__panel--next :global(.vkuiInternalPanel__fade) {
+.View--ios .View__panel--next .View__panel-overlay {
   animation: animation-ios-fade-out 0.6s var(--vkui--animation_easing_platform) forwards;
 }
 
-.View--ios .View__panel--prev ~ .View__panel--next :global(.vkuiInternalPanel__fade),
-.View--ios .View__panel--next ~ .View__panel--prev :global(.vkuiInternalPanel__fade) {
+.View--ios .View__panel--prev ~ .View__panel--next .View__panel-overlay,
+.View--ios .View__panel--next ~ .View__panel--prev .View__panel-overlay {
   display: none;
 }
 
@@ -160,7 +168,7 @@
 /**
  * Active panel
  */
-.View--ios .View__panel--active :global(.vkuiInternalPanel__fade) {
+.View--ios .View__panel--active .View__panel-overlay {
   display: none;
 }
 
